<resources>
    <string name="app_name">Family Monitoring</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_password">Confirm password</string>
</resources>
